Only retrieve prices with unique productId OR prices with max priority