@@ -4,6 +4,7 @@ package org.example.application.usecase.findpricecreated;
 import org.example.domain.model.pricecreateddomain.PriceCreatedDomainPersistencePort;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class FindPriceCreatedQueryHandlerImpl implements FindPriceCreatedQueryHandler {
@@ -17,8 +18,17 @@ public class FindPriceCreatedQueryHandlerImpl implements FindPriceCreatedQueryHa
     @Override
     public FoundPriceList handle(FindPriceCreatedQuery query) {
         List<FoundPriceCreated> result  =  priceCreatedDomainPersistencePort.find(query.productId(), query.brandId(), query.applicationDate()).parallelStream().map(item -> new FoundPriceCreated(
-                item.getBrandId(), item.getStartDate(), item.getEnDate(), item.getPriceList(), item.getProductId(), item.getPrice())).collect(Collectors.toList());
-        return new FoundPriceList(result);
+                item.getBrandId(), item.getStartDate(), item.getEnDate(), item.getPriceList(), item.getProductId(), item.getPriority(), item.getPrice(), item.getCurr())).toList();
+
+        List<FoundPriceCreated> filteredList = result.stream()
+                .filter(item -> result.stream()
+                        .filter(otherItem -> Objects.equals(item.productId(), otherItem.productId()))
+                        .mapToDouble(FoundPriceCreated::priority)
+                        .max()
+                        .orElse(-1) == item.priority())
+                .collect(Collectors.toList());
+
+        return new FoundPriceList(filteredList);
     }
 
 }
